@@ -428,6 +428,8 @@ AC_OUTPUT(
  docs/doxygen_api_conf
  docs/doxygen_full_conf
  tests/stemtest.pl
+ bindings/Makefile
+ bindings/python/Makefile
 ,
  if test -r docs/mkdoc.pl ; then chmod +x docs/mkdoc.pl ; fi
  if test -r tests/stemtest.pl ; then chmod +x tests/stemtest.pl ; fi
